--- a/publications_topics.html
+++ b/publications_topics.html
@@ -110,7 +110,7 @@ p{ margin:10px auto}
 
 
 
-<p lang="en-US"><span class="red"> Distributed System and Resource Management: Scheduling and Orchestration </span></p>
+<p lang="en-US"><span class="red"> Distributed and Parallel Computing </span></p>
 
 
 <p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing. 
@@ -197,7 +197,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
  
 
 
-<p lang="en-US"><span class="red"> System Dependability: Reliability and Fault Tolerance </span></p>
+<p lang="en-US"><span class="red"> System Dependability </span></p>
 
 <p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. BISSIAM: Bispectrum Siamese Network Based
 	Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 <a href="paper/tkde2021-bissiam.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
@@ -240,8 +240,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; P. Townend, S. J. Clement, D. Burdett, R. Yang*, J. Shaw, B. Slater, J. Xu. Improving Data Center Efficiency Through Holistic Scheduling In Kubernetes. in the 13th IEEE SOSE, 2019 <a href="paper/sose2019-k8s.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 
-
-<p lang="en-US"><span class="red"> Big Data and Deep Learning: Systems and Applications </span></p>
+<p lang="en-US"><span class="red"> Deep Learning Systems and Applications </span></p>
 
 <p><span class="style11">&bull; Y. Yang, R. Yang*, H. Peng, Y. Li, T. Li, Y. Liao, P. Zhou. FedACK: Federated Adversarial Contrastive Knowledge Distillation for Cross-Lingual and Cross-Model Social Bot Detection. ACM WWW 2023 <a href="paper/www2023-fedack.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
@@ -278,6 +277,11 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; H. Peng, J. Li, S. Wang, L. Wang, Q. Gong, R. Yang, B. Li, L. He and P. S. Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="paper/tkde2019.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a><span class="red"> (Highly Cited Paper)</span>
 </span></p> 
 
+
+
+<p lang="en-US"><span class="red"> Early Work on Big Data and Virtualized Execution Environment </span></p>
+
+
 <p><span class="style11">&bull; R. Yang, Z. Zhao, J. Ouyang, J. Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT (invited chapter and in press) </span></p>
 
 <p><span class="style11">&bull; Y. Zhang, M. Zhang, T. Wo, X. Lin, R. Yang, J. Xu. A Scalable lnternet-of-Vehicles Service over Joint Clouds. in the 9th IEEE JCC 2018 <a href="paper/jcc2018.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
@@ -301,10 +305,6 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 A Method for Private Car Transportation Dispatching Based on a Passenger Demand Model. in the 2nd International Conference on Internet of Vehicles (IoV 2015), 
 <a href="paper/iov2015.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
-
-
-<p lang="en-US"><span class="red"> Early Work on Virtualized Execution Environment </span></p>
-
 
 <p><span class="style11">&bull; P. Liu, R. Yang*, J. Sun, X. Liu.
 SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in the 13th IEEE SOSE, 2019 
