--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ p{ margin:10px auto}
 
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office:&nbsp; #37 Xueyuan Rd., Haidian District, Beijing, China &nbsp;</p>
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: &nbsp; renyu.yang AT buaa DOT edu DOT cn (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: &nbsp; renyuyang AT buaa DOT edu DOT cn (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp; 
 <a href="https://www.linkedin.com/in/renyu-yang-096b5b60" target="_blank">
     <img src="icons/linkedin.jpg" width="30" height="30" border="0" alt="LinkedIn" title="LinkedIn"/></a>
@@ -214,7 +214,7 @@ p{ margin:10px auto}
 	that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of 
 	data center efficiency and intelligence. Prior to this, I was a research scientist and lead project manager with the
 	<a href="http://bdbc.buaa.edu.cn" style="text-decoration: none">Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC)</a>, 
-	Beijing, China.  I was also with Alibaba Group (2014-2016), participating in the 
+	Beijing, China.  When I was a PhD student, I was also with Alibaba Group (2014-2016), participating in the 
 	development and research on intelligent resource scheduling and performance optimization at Internet scale. 
 	My research interests include large-scale dependable distributed systems, trustworthy data-centric engineering, 
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
@@ -235,6 +235,9 @@ p{ margin:10px auto}
 	Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, 
 	Lancaster University, Newcastle University upon Tyne, etc.).  I was on the program committees of many conferences, 
 	including IJCAI, ECAI, AAAI, CLOUD, etc., and was also the program/area chair of multiple conferences. 
+</span>
+
+<p><span class="style11"> Short bio in Chinese can be found here <a href="https://shi.buaa.edu.cn/yangrenyu/zh_CN/index.htm">中文简介</a>
 </span>
 
 </div>
@@ -400,7 +403,7 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 
 <p><span class="style11">&bull; Youmei Song (PhD, 2017.9- 2023.4, BDBC and BeihangU, with Prof. Tianyu Wo, first employment Postdoc at HKPolyU, China)</span></p>
 <p><span class="style11">&bull; Jianyong Zhu (PhD, 2017.9-2022.3 , BDBC and BeihangU, with Prof. Chunming Hu, first employment Assistant Professor at NCEPU, China)</span></p>
-<p><span class="style11">&bull; <a href="https://uk.linkedin.com/in/gingfung-matthew-yeung-a71688a2" style="text-decoration: none">Gingfung Yeung</a> (PhD, 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment Research Scientist at Huawei R&D UK) </span></p>
+<p><span class="style11">&bull; <a href="https://uk.linkedin.com/in/gingfung-matthew-yeung-a71688a2" style="text-decoration: none">Gingfung Yeung</a> (PhD, 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment Research Scientist at Huawei UK) </span></p>
 <p><span class="style11">&bull; Yiming Hei (PhD, 2019.9-2022.1, BDBC and BeihangU, with Prof. Jianwei Liu and Dr. Hao Peng)
 <p><span class="style11">&bull; Jaber Almutairi (PhD, 2018.6 - 2020.1, UoLeeds, with Prof. Jie Xu, first employment CEO at TaibahValley, KSA)
 </span></p> 
@@ -412,13 +415,13 @@ Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, UoLeeds),
 Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (MSc. of COMP5200M, 2020 Autumn, UoLeeds), 
 Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (MSc of COMP5200M, 2019.4-2019.9, UoLeeds) </span></p>
 
-<p><span class="style11">&bull; MSc. Students (Research) @BHU: Shiqing Xue (2018.9-2020.12, Beihang, first employment at Tecent Group), Junqing Xiao (MSc, 2016.9-2018.12, first employment at Alibaba Group), Ximing Qu (MSc, 2016.9-2018.12, first employment at Alibaba Group), 
-	Xiaoyang Sun (MSc, 2015.9-2018.3, PhD student at UoLeeds. UK), Lian Du (MSc, 2015.9-2018.3, first employment at Alibaba Group), Hailun Wang (MSc, 2015.9-2017.3, first employment at Baidu Inc.),  
-	Xixu Wang (MSc, 2014.9-2017.3, first employment at Baidu Inc.), Wenbo Jiang (MSc, 2013.9-2016.3, first employment at NetEase Inc.), Yunchang Zhao (MSc, 2013.9-2016.3, first employment at an Internet startup), Yuda Wang (MSc, 2012.9-2015.3, first employment at China Telecom.) </span></p> 
+<p><span class="style11">&bull; MSc. Students (Research) @BHU: Shiqing Xue (2018.9-2020.12, first employment at Tecent), Junqing Xiao (MSc, 2016.9-2018.12, first employment at Alibaba), Ximing Qu (MSc, 2016.9-2018.12, first employment at Alibaba), 
+	Xiaoyang Sun (MSc, 2015.9-2018.3, PhD student at UoLeeds UK), Lian Du (MSc, 2015.9-2018.3, first employment at Alibaba), Hailun Wang (MSc, 2015.9-2017.3, first employment at Baidu),  
+	Xixu Wang (MSc, 2014.9-2017.3, first employment at Baidu), Wenbo Jiang (MSc, 2013.9-2016.3, first employment at NetEase Inc.), Yunchang Zhao (MSc, 2013.9-2016.3, first employment at an Internet startup), Yuda Wang (MSc, 2012.9-2015.3, first employment at China Telecom.) </span></p> 
 	
 <p><span class="style11">&bull; BSc. Students: Leo Bishop, Danielle Kushnir, Thomas Killeen, Dominik Strak (BSc, 2022-2023, UoLeeds, with Prof. Jie Xu), 
 	Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2021-2022, UoLeeds, with Prof. Jie Xu), 
-	Chris London (BSc, 2021, UoLeeds, first employment at Permutive UK), Charlee Boyle (BSc, 2021, UoLeeds, first employment at IBM UK), Sam Hepburn (BSc, 2021, UoLeeds, first employment at Knowledge Integration Ltd. UK), <a href="https://people.cs.uchicago.edu/~michaelht/" style="text-decoration: none">Michael Hao Tong</a> (B.Sc, 2012.9-2014.6, PhD student at UoChicago, US) </span></p>
+	Chris London (BSc, 2021, UoLeeds, first employment at Permutive UK), Charlee Boyle (BSc, 2021, UoLeeds, first employment at IBM UK), Sam Hepburn (BSc, 2021, UoLeeds, first employment at Knowledge Integration Ltd. UK), <a href="https://people.cs.uchicago.edu/~michaelht/" style="text-decoration: none">Michael Hao Tong</a> (B.Sc, 2012.9-2014.6, PhD student at UoChicago -> Google) </span></p>
 
 
 <p><span class="style11">
