--- a/presentations.html
+++ b/presentations.html
@@ -47,7 +47,7 @@
 	font-family:Arial,"\6977 \4F53 "}
 .style11
 	{text-align:left;
-	font-size:12pt;
+	font-size:11pt;
 	font-family:Arial,"\6977 \4F53 "}
 .style12
 	{text-align:justify;
@@ -153,8 +153,8 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; An Analysis of Performance Interference Effects on Energy-Efficiency and VM placement in Virtualized Cloud Environments. iVCE All-Hands Meeting(iVCE-AHM), 16th October,2013,Changsha,China </span> &nbsp;</p>
 
-<p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p lang="en-US"><span class="incline"> Updated by Dec. 2020 </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp; <span class="style11"> </span> &nbsp; &nbsp;</p>
+<p lang="en-US"><span class="style11"> Updated by Aug. 2023 </span> &nbsp; &nbsp;</p>
 
 </p>
 </td>
