--- a/alumni.html
+++ b/alumni.html
@@ -119,7 +119,7 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 </span></p> 
 
 
-<p><span class="style11"><strong> Former MSc. Students (Research) @BeihangU </strong></span></p> 
+<p><span class="style11"><strong> Former MSc. Students (by Research) @BeihangU </strong></span></p> 
 
 <p><span class="style11">&bull; Shiqing Xue (2018.9-2020.12, first employment at Tecent)</span></p> 
 <p><span class="style11">&bull; Junqing Xiao (MSc, 2016.9-2018.12, first employment at Alibaba)</span></p> 
