--- a/index.html
+++ b/index.html
@@ -357,7 +357,9 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <!--p><span class="style11">~$  <strong> grants -l </strong> </span></p-->
 
-<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (¥300K~£35K), Kuaishou Research Gift Award, Co-PI, 2023 - 2024  </span></p> 
+<p><span class="style11">&bull; Essentials of Cloud Computing (¥400K), funded by Core Curriculum Redefined Plan, National College of Engineering Excellence, Co-I, 2023 - 2024  </span></p> 
+
+<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (¥300K), Kuaishou Research Gift Award, Co-PI, 2023 - 2024  </span></p> 
 
 <p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
 
@@ -418,7 +420,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="Bolder"><!--img src="icons/presentation-banner.png" width="25" height="25" border="0"/--> Teaching and Presentations </span></p>
  
 <p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Scientific Research Class (Undergraduate Level, BeihangU), Autumn 2023 </span></p>
-<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Service Computing (Graduate Level, BeihangU, with Dr. Xu Wang), Autumn 2023 </span></p> 
+<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Foundations of Service Computing (Graduate Level, BeihangU, with Dr. Xu Wang), Autumn 2023 </span></p> 
 
 <p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, UoLeeds, with Prof. Jie Xu), Autumn 2020-2022</span></p> 
 
