--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 .style11
 	{text-align:justify;
 	font-size:11pt;
+	line-height:1.05;
 	font-family:Arial,"\6977 \4F53 "}
 .style12
 	{text-align:justify;
@@ -121,7 +122,9 @@ p{ margin:10px auto}
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Associate Professor, <a href="https://soft.buaa.edu.cn" style="text-decoration: none">School of Software</a>, <a href="https://www.buaa.edu.cn" style="text-decoration: none">Beihang University</a>, China</p>
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab)</p>
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office:&nbsp; #37 Xueyuan Rd., Haidian District, Beijing, China &nbsp;</p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office:&nbsp; Room 6.31 Zeng Xian-Zi Building or Room G513 New Main Building &nbsp;</p>
+
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Address:&nbsp; #37 Xueyuan Rd., Haidian District, Beijing, China &nbsp;</p>
 
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: &nbsp; renyuyang AT buaa DOT edu DOT cn (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp; 
@@ -357,7 +360,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <!--p><span class="style11">~$  <strong> grants -l </strong> </span></p-->
 
-<p><span class="style11">&bull; Essentials of Cloud Computing (¥400K), funded by Core Curriculum Redefined Plan, National College of Engineering Excellence, Co-I, 2023 - 2024  </span></p> 
+<p><span class="style11">&bull; Essentials of Modern Cloud Computing (¥400K), funded by Core Curriculum Redefined Plan, National College of Engineering Excellence, Co-I, 2023 - 2024  </span></p> 
 
 <p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (¥300K), Kuaishou Research Gift Award, Co-PI, 2023 - 2024  </span></p> 
 
