--- a/index.html
+++ b/index.html
@@ -315,9 +315,7 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; Y. Yang, R. Yang, Y. Li, H. Peng, T. Li, Y. Liao, P. Zhou. <a href="paper/www2023-fedack.pdf" style="text-decoration: none">FedACK: Federated Adversarial Contrastive Knowledge Distillation for Cross-Lingual and Cross-Model Social Bot Detection</a>. ACM WWW 2023 <span class="red">(CCF A)</span> </span></p>
 
-<p><span class="style11">&bull; R. Yang, J. Zhu, X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters</a>. IEEE TPDS 2022 <span class="red">(CCF A)</span> </span></p>
-
-<p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. <a href="paper/secon2022.pdf" style="text-decoration: none">Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization</a>. IEEE SECON 2022 <span class="red">(CCF B)</span> </span></p>
+<p><span class="style11">&bull; J. Zhu, R. Yang, X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters</a>. IEEE TPDS 2022 <span class="red">(CCF A)</span> </span></p>
 
 <p><span class="style11">&bull; X. Sun, W. Wang, S. Qiu, R. Yang, S. Huang, J. Xu, Z. Wang. <a href="paper/sc2022.pdf" style="text-decoration: none">STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training</a>. ACM/IEEE SC 2022 <span class="red">(CCF A)</span> </span></p>
 
@@ -325,7 +323,7 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang. <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE TKDE 2021 <span class="red">(CCF A)</span> </span></p>
 
-<p><span class="style11">&bull; R. Yang, Y. Hei, H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. <a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">Hawk: Rapid Android Malware Detection through Heterogeneous Graph Neural Network</a>. IEEE TNNLS 2021 <span class="red">(CCF B/CORE A*, IF14.255)</span></span></p>
+<p><span class="style11">&bull; Y. Hei, R. Yang, H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. <a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">Hawk: Rapid Android Malware Detection through Heterogeneous Graph Neural Network</a>. IEEE TNNLS 2021 <span class="red">(CCF B/CORE A*, IF14.255)</span></span></p>
 
 <p><span class="style11">&bull; H. Peng, R. Yang, Z. Wang, J. Li, L. He, P. S. Yu, A. Y. Zomaya, R. Ranjan. <a href="paper/tc2021.pdf" style="text-decoration: none">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>. IEEE TC 2021 <span class="red">(CCF A)</span></span></p>
 
@@ -334,8 +332,6 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; R. Yang, C. Hu, X. Sun, P. Garraghan, T. Wo, Z. Wen, H. Peng, J. Xu and C. Li. <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE TPDS 2020 <span class="red">(CCF A)</span></span></p>
 
 <p><span class="style11">&bull; Z. Wen, T. Lin, R. Yang, S. Ji, R. Ranjan, A. Romanovsky, C. Lin, J. Xu. <a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds</a>. IEEE TPDS 2019 <span class="red">(CCF A)</span></span></p>
-
-<p><span class="style11">&bull; R. Yang, J. Zhu, C. Hu, T. Wo, S. Xue, J. Ouyang and J. Xu. <a href="paper/ccgrid2021.pdf" style="text-decoration: none">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a> <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE/ACM CCGRID 2021 <span class="red">(CORE A)</span> ACM SoCC 2019 <span class="red">(CCF B)</span></span></p>
 
 <p><span class="style11">&bull; X. Sun, C. Hu, R. Yang, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li.  <a href="paper/icdcs2018.pdf" style="text-decoration: none">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a> <a href="paper/sosp2017-poster.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE ICDCS 2018 <span class="red">(CCF B/CORE A)</span> ACM SOSP 2017 <span class="red">(CCF A)</span></span></p>
 
