--- a/publications.html
+++ b/publications.html
@@ -25,9 +25,14 @@
 .red
 	{text-align:justify;
 	font-size:11pt;
-	font-weight: bold;
 	font-family:Arial,"\6977 \4F53 ";
 	color:#F00}
+.blue
+	{text-align:justify;
+	font-size:11pt;
+	font-weight: bold;
+	font-family:Arial,"\6977 \4F53 ";
+	color:#03F}
 .blue_paper_title
 	{color:#03F;
 	text-align:justify;
@@ -107,7 +112,7 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information. </span> &nbsp; &nbsp;</p>
 <p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. '= co-first authors with equal contribution by alphabetical order </span> &nbsp; &nbsp;</p>
 
-<p lang="en-US"><span class="red">2023</span></p>
+<p lang="en-US"><span class="blue">2023</span></p>
 
 
 <p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing. 
@@ -125,7 +130,7 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; J. Zhao, R. Yang, S. Qiu, Z. Wang. Enhancing High-dimensional Bayesian Optimization by Optimizing the Acquisition Function Maximizer Initialization. arXiv Preprint, arXiv:2302.08298 <a href="https://arxiv.org/abs/2302.08298.pdf"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a> </span></p>
 
-<p lang="en-US"><span class="red">2022</span></p>
+<p lang="en-US"><span class="blue">2022</span></p>
 
 <p><span class="style11">&bull; R. Yang', J. Zhu', X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters, IEEE Trans. on Parallel and Distributed Systems (TPDS) 
 <a href="paper/tpds2022-toposcaling.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
@@ -158,7 +163,7 @@ p{ margin:10px auto}
 
  
 
-<p lang="en-US"><span class="red">2021</span></p>
+<p lang="en-US"><span class="blue">2021</span></p>
 
 <p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. BISSIAM: Bispectrum Siamese Network Based
 Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Data Engineering (TKDE) <a href="paper/tkde2021-bissiam.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
@@ -181,7 +186,7 @@ Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Da
 <p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks. ACM Trans. on Information Systems (TOIS) <a href="paper/tois2021-riognn.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a><a href="https://arxiv.org/abs/2104.07886"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a>  <span class="red">(Hot Paper in ESI)</span>
 </span></p>
 
-<p lang="en-US"><span class="red">2020</span></p>
+<p lang="en-US"><span class="blue">2020</span></p>
 
 <p><span class="style11">  &bull; R. Yang, C. Hu, X. Sun, P. Garraghan, T. Wo, Z. Wen, H. Peng, J. Xu and C. Li. Performance-aware Speculative Resource Oversubscription for Large-scale Clusters, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 
@@ -214,7 +219,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 
 
 
-<p lang="en-US"><span class="red">2019</span></p>
+<p lang="en-US"><span class="blue">2019</span></p>
 
 <p><span class="style11">  &bull; Z. Wen, T.Lin, R. Yang*, S. Ji, R. Ranjan, A. Romanovsky, C. Lin, J. Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019 
@@ -245,7 +250,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 </span></p>
 
 
-<p lang="en-US"> <span class="red">2018 </span></p>
+<p lang="en-US"> <span class="blue">2018 </span></p>
 
 <p><span class="style11">  &bull; P. Garraghan, R. Yang*, Z. Wen, A. Romanovsky, J. Xu, R. Buyya, R. Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale. IEEE Cloud Computing, 2018 (SCI-IF = 2.929, Q1) <a href="paper/ieeecloud2018.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
@@ -262,7 +267,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">  &bull; R. Yang, Z. Zhao, J. Ouyang, J. Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT (invited chapter and in press) </span></p>
 
 
-<p lang="en-US"><span class="red">2017 </span></p>
+<p lang="en-US"><span class="blue">2017 </span></p>
 
 <p><span class="style11">  &bull; R. Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 <span class="red"> (with Honor, Outstanding Graduate Award of Beijing Graduates)</span>
 </span></p>
@@ -288,7 +293,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">  &bull; X. Ouyang, C. Wang, R. Yang, P. Townend, J. Xu. ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics. In the 23th IEEE ICPADS 2017 <a href="paper/icpads2017.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
 
-<p lang="en-US"> <span class="red">2016 and Before </span></p>
+<p lang="en-US"> <span class="blue">2016 and Before </span></p>
 
 
 <p><span class="style11">  &bull; Z. Zhang, C. Li, Y. Tao, R. Yang*, H. Tang, J. Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale, in the 40th VLDB 2014 <a href="paper/vldb2014.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
