--- a/publications_topics.html
+++ b/publications_topics.html
@@ -25,9 +25,14 @@
 .red
 	{text-align:justify;
 	font-size:11pt;
-	font-weight: bold;
 	font-family:Arial,"\6977 \4F53 ";
 	color:#F00}
+.blue
+	{text-align:justify;
+	font-size:11pt;
+	font-weight: bold;
+	font-family:Arial,"\6977 \4F53 ";
+	color:#03F}
 .blue_paper_title
 	{color:#03F;
 	text-align:justify;
@@ -110,7 +115,7 @@ p{ margin:10px auto}
 
 
 
-<p lang="en-US"><span class="red"> Distributed and Parallel Computing </span></p>
+<p lang="en-US"><span class="blue"> Distributed and Parallel Computing </span></p>
 
 
 <p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing. 
@@ -197,7 +202,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
  
 
 
-<p lang="en-US"><span class="red"> System Dependability </span></p>
+<p lang="en-US"><span class="blue"> System Dependability </span></p>
 
 <p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. BISSIAM: Bispectrum Siamese Network Based
 	Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 <a href="paper/tkde2021-bissiam.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
@@ -240,7 +245,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; P. Townend, S. J. Clement, D. Burdett, R. Yang*, J. Shaw, B. Slater, J. Xu. Improving Data Center Efficiency Through Holistic Scheduling In Kubernetes. in the 13th IEEE SOSE, 2019 <a href="paper/sose2019-k8s.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 
-<p lang="en-US"><span class="red"> Deep Learning Systems and Applications </span></p>
+<p lang="en-US"><span class="blue"> Deep Learning Systems and Applications </span></p>
 
 <p><span class="style11">&bull; Y. Yang, R. Yang*, H. Peng, Y. Li, T. Li, Y. Liao, P. Zhou. FedACK: Federated Adversarial Contrastive Knowledge Distillation for Cross-Lingual and Cross-Model Social Bot Detection. ACM WWW 2023 <a href="paper/www2023-fedack.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
@@ -279,7 +284,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 
 
-<p lang="en-US"><span class="red"> Early Work on Big Data and Virtualized Execution Environment </span></p>
+<p lang="en-US"><span class="blue"> Early Work on Big Data and Virtualized Execution Environment </span></p>
 
 
 <p><span class="style11">&bull; R. Yang, Z. Zhao, J. Ouyang, J. Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT (invited chapter and in press) </span></p>
