--- a/index.html
+++ b/index.html
@@ -195,9 +195,11 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed), deadline: <span class="red">31 Oct 2023</span> </span></p>
 
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline: <span class="red">15 August 2023</span> </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline extended to <span class="red">15 Jan. 2024</span> </span></p>
 
-<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> (06/2023) RAIDS Lab is open and we are recruiting young talents! <span class="red">Postdoc/PhD/MSc/undergraduate intern positions are open to apply! </span> Drop me an email if you are interested... </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> (06/2023) RAIDS Lab is open and we are recruiting young talents! <span class="red">Postdoc/PhD/MSc/undergraduate intern positions are open to apply! </span> Drop me an email if you are interested... </span></p>
+
+<p><span class="style11"> (29/08/2023) Our work on IoT streaming management is accepted by IEEE Trans. on Services Computing. </span></p>
 
 <p><span class="style11"> (20/04/2023) I presented a poster on <a href="paper/ati2023-poster.pdf">Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters</a> in the UK Alan Turing Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing.</span></p>
 
@@ -246,7 +248,7 @@ p{ margin:10px auto}
 	including IJCAI, ECAI, AAAI, CLOUD, etc., and was also the program/area chair of multiple conferences. 
 </span>
 
-<p><span class="style11"> Short Chinese bio officially maintained by Beihang University can be found here <a href="https://shi.buaa.edu.cn/yangrenyu/zh_CN/index.htm">中文简介</a>
+<p><span class="style11"> My official bio in Chinese maintained by Beihang University can be found here <a href="https://shi.buaa.edu.cn/yangrenyu/zh_CN/index.htm">中文简介</a>
 </span>
 
 </div>
@@ -258,8 +260,8 @@ p{ margin:10px auto}
 <p><span class="Bolder"><!--img src="icons/research-banner.png" width="25" height="25" border="0"/--> Research Interests</span></p>
 <p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed and parallel computing systems (cloud computing, big data, deep learning, IoT, etc.) at scale. My research mainly focuses on: </span></p>
 	<p><span class="style11">&bull; <strong>Improved resource efficiency of large-scale datacenters:</strong>
-		QoS-aware scheduling and resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>,<a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>,<a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>,<a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>,<a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>], 
-		and multi-objective optimization [<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>,<a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>,<a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>,<a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
+		QoS-aware scheduling and resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>], 
+		and multi-objective optimization [<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>, <a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>, <a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>, <a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
 	<p><span class="style11">&bull; <strong>Improved system dependability:</strong>
 		fault tolerance and failover [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>], 
 		long-tail task mitigation [<a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>], 
@@ -310,6 +312,8 @@ p{ margin:10px auto}
 
 
 <!--p><span class="style11">~$ pub -rl</span></p--> 
+
+<p><span class="style11">&bull; Z. Wen, R. Yang, B. Qian, Z. Wang, H. Peng, J. Xu, A.Y. Zomaya, R. Ranjan. <a href="paper/tsc2023.pdf" style="text-decoration: none">Janus: Latency-Aware Traffic Scheduling for IoT Data Streaming in Edge Environments</a>. IEEE TSC 2023 <span class="red">(CCF A)</span> </span></p>
 
 <p><span class="style11">&bull; D. Zou, H. Peng, X. Huang, R. Yang, J. Li, J. Wu, C. Liu, P. S. Yu. <a href="paper/www2023-segsl.pdf" style="text-decoration: none">SE-GSL: A General and Effective Graph Structure Learning Framework through Structural Entropy Optimization</a>. ACM WWW 2023  <span class="red">(CCF A)</span> </span></p>
 
