--- a/publications.html
+++ b/publications.html
@@ -115,10 +115,13 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="blue">2023</span></p>
 
 
-<p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing. 
+<p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing  
 <a href="paper/ati2023-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 </span></p>
 
+<p><span class="style11">&bull; Z. Wen, R. Yang*, B. Qian, Z. Wang, H. Peng, J. Xu, A.Y. Zomaya, R. Ranjan. Janus: Latency-Aware Traffic Scheduling for IoT Data Streaming in Edge Environments. IEEE Trans. on Services Computing (TSC) 
+<a href="paper/tsc2023.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>
 
 <p><span class="style11">&bull; C. Mommessin', R. Yang'*, N. Shakhlevich, X. Sun, S. Kumar, J. Xiao, J. Xu. Affinity-Aware Resource Provisioning for Long-Running Applications in Shared Clusters, Journal of Parallel and Distributed Computing (JPDC) 
 <a href="paper/jpdc2023.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> <a href="https://arxiv.org/pdf/2208.12738.pdf"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a> 
