--- a/publications_topics.html
+++ b/publications_topics.html
@@ -118,13 +118,19 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="blue"> Distributed and Parallel Computing </span></p>
 
 
-<p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing. 
+<p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing  
 	<a href="paper/ati2023-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 	</span></p>
-	
+
+<p><span class="style11">&bull; Z. Wen, R. Yang*, B. Qian, Z. Wang, H. Peng, J. Xu, A.Y. Zomaya, R. Ranjan. Janus: Latency-Aware Traffic Scheduling for IoT Data Streaming in Edge Environments. IEEE Trans. on Services Computing (TSC), 2023 
+	<a href="paper/tsc2023.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+	</span></p>
+
 <p><span class="style11">&bull; R. Yang', J. Zhu', X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters, IEEE Trans. on Parallel and Distributed Systems (TPDS), 2022
 <a href="paper/tpds2022-toposcaling.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
+
+
 
 <p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization. 19th IEEE International Conference on Sensing, Communication, and Networking (SECON), 2022
 <a href="paper/secon2022.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
