--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ p{ margin:10px auto}
 <div align="left">
 &nbsp;
 </div>
-<p class="style11"><span class="name"> <img src="images/yangry2017a.jpg" height="242" width="188"></span></p>
+<p class="style11"><span class="name"> <img src="images/yangry2020.jpeg" height="242" ></span></p>
 </td>
 
 
@@ -114,20 +114,20 @@ p{ margin:10px auto}
 </div>
 
 <span class="STYLE15"> 
-	&nbsp;&nbsp; <strong>Renyu Yang</strong> (杨任宇) &nbsp; 
+	&nbsp;<strong>Renyu Yang</strong> (杨任宇) &nbsp; 
 </span>
 
-<p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"I find that the harder I work, the more luck I seem to have." Thomas Jefferson</p>
+<p class="STYLE16">&nbsp;"I find that the harder I work, the more luck I seem to have." Thomas Jefferson</p>
 
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Associate Professor, <a href="https://soft.buaa.edu.cn" style="text-decoration: none">School of Software</a>, <a href="https://www.buaa.edu.cn" style="text-decoration: none">Beihang University</a>, China</p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab)</p>
+<p class="STYLE17">&nbsp;Associate Professor, <a href="https://soft.buaa.edu.cn" style="text-decoration: none">School of Software</a>, <a href="https://www.buaa.edu.cn" style="text-decoration: none">Beihang University</a>, China</p>
+<p class="STYLE17">&nbsp;Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab)</p>
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office:&nbsp; Room 6.31 Zeng Xian-Zi Building or Room G513 New Main Building &nbsp;</p>
+<p class="style11">&nbsp;<strong>Office</strong>:&nbsp; Room 6.31 Zeng Xian-Zi Building or Room G513 New Main Building &nbsp;</p>
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Address:&nbsp; #37 Xueyuan Rd., Haidian District, Beijing, China &nbsp;</p>
+<p class="style11">&nbsp;<strong>Address</strong>:&nbsp; #37 Xueyuan Rd., Haidian District, Beijing, China &nbsp;</p>
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: &nbsp; renyuyang AT buaa DOT edu DOT cn (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp; 
+<p class="style11">&nbsp;<strong>Email</strong>: &nbsp; renyuyang AT buaa DOT edu DOT cn (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
+<p class="style11">&nbsp;<strong>Links</strong>: &nbsp; 
 <a href="https://www.linkedin.com/in/renyu-yang-096b5b60" target="_blank">
     <img src="icons/linkedin.jpg" width="30" height="30" border="0" alt="LinkedIn" title="LinkedIn"/></a>
 
@@ -195,7 +195,7 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed), deadline: <span class="red">31 Oct 2023</span> </span></p>
 
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline extended to <span class="red">15 Jan. 2024</span> </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline extended to <span class="red">15 Jan. 2024</span> </span></p>
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> (06/2023) RAIDS Lab is open and we are recruiting young talents! <span class="red">Postdoc/PhD/MSc/undergraduate intern positions are open to apply! </span> Drop me an email if you are interested... </span></p>
 
@@ -402,15 +402,14 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Yuyan Zhao (2023.9- , BeihangU, with Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Yulin Su (2023.9- , BeihangU, with Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Jinghao Wang (2023.5- , BeihangU, with Prof. Chunming Hu and Dr. Xu Wang) </span></p> 
-<p><span class="style11">&bull; Ying Zhang (2023.5- , BeihangU, with Prof. Tianyu Wo) </span></p> 
-<p><span class="style11">&bull; Jiayu Zhao (2021.9- , UoLeeds, with Prof. Zheng Wang): arXiv'22 </span></p>
 <p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, with Prof. Yong Liao and Dr. Pengyuan Zhou): TWEB'23, WWW'23, arXiv'23 </span></p>
 </div>
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
 
-<p><span class="style11">&bull; [Class 2021] Kuoran Zhuang, Peixi Li, Tianbo Qiu, Tao Yan (BeihangU, co-supervised with Prof. Tianyu Wo) </span></p>
-<p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang, Jia Duan (BeihangU, co-supervised with Prof.Tianyu Wo or Prof. Chunming Hu) </span></p>
-<p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang (BeihangU, co-supervised with Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; [Class 2021] Kuoran Zhuang, Peixi Li, Tianbo Qiu, Tao Yan (BeihangU, co-supervised with Prof. Tianyu Wo/Chunming Hu) </span></p>
+<p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang, Jia Duan, Hang Xi (BeihangU, co-supervised with Prof. Tianyu Wo/Chunming Hu) </span></p>
+<p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang (BeihangU, co-supervised with Prof. Tianyu Wo/Chunming Hu) </span></p>
+<p><span class="style11">&bull; [Part Time] Xiaoyu Liu, Qi Wang, Yao Zhang (BeihangU) </span></p>
 
 <p><span class="style11"><strong>Team Alumni</strong>: <a href="alumni.html" style="text-decoration: none">~$ alumni </a> </span></p>
 
@@ -438,7 +437,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="Bolder"><!--img src="icons/service-banner.png" width="22" height="25" border="0"/--> Selected Professional Services </span></p>
 
 <p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed)</span></p>
-<p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690) </span></p>
+<p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690) </span></p>
 <p><span class="style11">&bull; Review Editor@Editorial Board: Frontiers in Big Data, Frontiers in High Performance Computing  </span></p>
 
 <p><span class="style11">&bull; Program Chair: IEEE International Conference on Joint Cloud Computing (JCC) 2020, 2019, etc. </span></p>
