--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 p{ margin:10px auto} 
 </style>
 </head>
-<title>Renyu YANG's Homepage</title>
+<title>Renyu Yang's Homepage</title>
 <body>
 
 <!--span class="STYLE15"> 
@@ -104,7 +104,7 @@ p{ margin:10px auto}
 <div align="left">
 &nbsp;
 </div>
-<p class="style11"><span class="name"> <img src="images/yangry2020.jpeg" height="242" ></span></p>
+<p class="style11"><span class="name"> <img src="images/yangry2020c.jpg" height="242" ></span></p>
 </td>
 
 
@@ -360,9 +360,11 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <!--p><span class="style11">~$  <strong> grants -l </strong> </span></p-->
 
+<p><span class="style11">&bull; Efficient Resource Scheduling for Intelligent Computing Infrastructures (¥200K), funded by Advanced Multidisciplinary Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
+
 <p><span class="style11">&bull; Essentials of Modern Cloud Computing (¥400K), funded by Core Curriculum Redefined Plan, National College of Engineering Excellence, Co-I, 2023 - 2024  </span></p> 
 
-<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (¥300K), Kuaishou Research Gift Award, Co-PI, 2023 - 2024  </span></p> 
+<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (¥300K), funded by Kuaishou Research Gift Award, Co-PI, 2023 - 2024  </span></p> 
 
 <p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
 
@@ -421,13 +423,12 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="Bolder"><!--img src="icons/presentation-banner.png" width="25" height="25" border="0"/--> Teaching and Presentations </span></p>
  
-<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Scientific Research Class (Undergraduate Level, BeihangU), Autumn 2023 </span></p>
-<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Foundations of Service Computing (Graduate Level, BeihangU, with Dr. Xu Wang), Autumn 2023 </span></p> 
-
+<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Foudations of Cloud Computing (Undergraduate Level, BeihangU), Spring 2024 </span></p>
+<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Software Engineering (Undergraduate Level, BeihangU), Spring 2024 </span></p>
+<p><span class="style11">&bull; Scientific Research Class (Undergraduate Level, BeihangU), Autumn 2023 </span></p>
+<p><span class="style11">&bull; Foundations of Service Computing (Graduate Level, BeihangU, with Dr. Xu Wang), Autumn 2023 </span></p> 
 <p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, UoLeeds, with Prof. Jie Xu), Autumn 2020-2022</span></p> 
-
 <p><span class="style11">&bull; Essentials of Cloud Computing (CS61839, Graduate Level, BeihangU, with Prof. Chunming Hu), Spring 2017</span></p> 
-
 <p><span class="style11">&bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html" style="text-decoration: none">~$ talks</a> </span></p>
 
 </div>
