--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ p{ margin:10px auto}
 <div align="left">
 &nbsp;
 </div>
-<p class="style11"><span class="name"> <img src="images/yangry2020c.jpg" height="242" ></span></p>
+<p class="style11"><span class="name"> <img src="images/yangry2023.png" height="230" ></span></p>
 </td>
 
 
@@ -400,18 +400,19 @@ I had the opportunity to work closely with many institutes around the world and 
 
 
 <p><span class="style11"><strong>PhD Students</strong> </span></p>
-<p><span class="style11">&bull; Yihui Zhang (2023.9- , BeihangU, with Prof. Tianyu Wo) </span></p>
-<p><span class="style11">&bull; Yuyan Zhao (2023.9- , BeihangU, with Prof. Tianyu Wo) </span></p>
-<p><span class="style11">&bull; Yulin Su (2023.9- , BeihangU, with Prof. Tianyu Wo) </span></p>
-<p><span class="style11">&bull; Jinghao Wang (2023.5- , BeihangU, with Prof. Chunming Hu and Dr. Xu Wang) </span></p> 
-<p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, with Prof. Yong Liao and Dr. Pengyuan Zhou): TWEB'23, WWW'23, arXiv'23 </span></p>
+<p><span class="style11">&bull; Yihui Zhang (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; Yuyan Zhao (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; Yulin Su (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; Jinghao Wang (2023.5- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang) </span></p> 
+<p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, w/ Prof. Yong Liao and Dr. Pengyuan Zhou): TWEB'23, WWW'23, arXiv'23 </span></p>
 </div>
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
 
-<p><span class="style11">&bull; [Class 2021] Kuoran Zhuang, Peixi Li, Tianbo Qiu, Tao Yan (BeihangU, co-supervised with Prof. Tianyu Wo/Chunming Hu) </span></p>
-<p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang, Jia Duan, Hang Xi (BeihangU, co-supervised with Prof. Tianyu Wo/Chunming Hu) </span></p>
-<p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang (BeihangU, co-supervised with Prof. Tianyu Wo/Chunming Hu) </span></p>
-<p><span class="style11">&bull; [Part Time] Xiaoyu Liu, Qi Wang, Yao Zhang (BeihangU) </span></p>
+<p><span class="style11">&bull; [Class 2021] Kuoran Zhuang, Peixi Li, Tianbo Qiu, Tao Yan (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
+<p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang, Jia Duan, Hang Xi (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
+<p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang, Jiaxun Huang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
+<p><span class="style11">&bull; [Class 2024] Shiyi Huang (w/ Dr. Xu Wang), Zexin Wu </span></p>
+<p><span class="style11">&bull; [Part Time] Xiaoyu Liu, Qi Wang, Yao Zhang </span></p>
 
 <p><span class="style11"><strong>Team Alumni</strong>: <a href="alumni.html" style="text-decoration: none">~$ alumni </a> </span></p>
 
