--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ p{ margin:10px auto}
 
 <p class="style11">&nbsp;<strong>Address</strong>:&nbsp; #37 Xueyuan Rd., Haidian District, Beijing, China &nbsp;</p>
 
-<p class="style11">&nbsp;<strong>Email</strong>: &nbsp; renyuyang AT buaa DOT edu DOT cn (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
+<p class="style11">&nbsp;<strong>Email</strong>: &nbsp; {renyuyang, renyu.yang} AT buaa DOT edu DOT cn (main) or renyu.yang1 AT gmail.com &nbsp; </p>
 <p class="style11">&nbsp;<strong>Links</strong>: &nbsp; 
 <a href="https://www.linkedin.com/in/renyu-yang-096b5b60" target="_blank">
     <img src="icons/linkedin.jpg" width="30" height="30" border="0" alt="LinkedIn" title="LinkedIn"/></a>
@@ -408,7 +408,7 @@ I had the opportunity to work closely with many institutes around the world and 
 </div>
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
 
-<p><span class="style11">&bull; [Class 2021] Kuoran Zhuang, Peixi Li, Tianbo Qiu, Tao Yan (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
+<p><span class="style11">&bull; [Class 2021] Kuoran Zhuang, Peixi Li, Tao Yan (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang, Jia Duan, Hang Xi (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang, Jiaxun Huang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2024] Shiyi Huang (w/ Dr. Xu Wang), Zexin Wu </span></p>
