--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ p{ margin:10px auto}
 
 <p class="style11">&nbsp;<strong>Address</strong>:&nbsp; #37 Xueyuan Rd., Haidian District, Beijing, China &nbsp;</p>
 
-<p class="style11">&nbsp;<strong>Email</strong>: &nbsp; {renyuyang, renyu.yang} AT buaa DOT edu DOT cn (main) or renyu.yang1 AT gmail.com &nbsp; </p>
+<p class="style11">&nbsp;<strong>Email</strong>: &nbsp; {renyuyang, renyu.yang} AT buaa DOT edu DOT cn (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
 <p class="style11">&nbsp;<strong>Links</strong>: &nbsp; 
 <a href="https://www.linkedin.com/in/renyu-yang-096b5b60" target="_blank">
     <img src="icons/linkedin.jpg" width="30" height="30" border="0" alt="LinkedIn" title="LinkedIn"/></a>
@@ -141,7 +141,7 @@ p{ margin:10px auto}
 	<img src="icons/orcid.png" width="70" height="30" alt="ORCID" border="0" title="ORCID"/></a>
 	
 <a href="https://shi.buaa.edu.cn/yangrenyu/zh_CN/index.htm" target="_blank">
-	<img src="images/beihang.jpg" width="110" height="30" alt="Beihang" border="0" title="Offical Homepage at Beihang University"/></a>
+	<img src="images/beihang.jpg" width="30" height="30" alt="Beihang" border="0" title="Offical Homepage at Beihang University"/></a>
 </p>
 </td>
 
@@ -424,10 +424,10 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="Bolder"><!--img src="icons/presentation-banner.png" width="25" height="25" border="0"/--> Teaching and Presentations </span></p>
  
-<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Foudations of Cloud Computing (Undergraduate Level, BeihangU), Spring 2024 </span></p>
-<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Software Engineering (Undergraduate Level, BeihangU), Spring 2024 </span></p>
-<p><span class="style11">&bull; Scientific Research Class (Undergraduate Level, BeihangU), Autumn 2023 </span></p>
-<p><span class="style11">&bull; Foundations of Service Computing (Graduate Level, BeihangU, with Dr. Xu Wang), Autumn 2023 </span></p> 
+<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Foudations of Cloud Computing (Undergraduate Level, BeihangU), [Spring 2024] </span></p>
+<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Software Engineering (Undergraduate Level, BeihangU), [Spring 2024] </span></p>
+<p><span class="style11">&bull; Scientific Research Class (Undergraduate Level, BeihangU), [Autumn 2023] </span></p>
+<p><span class="style11">&bull; Foundations of Service Computing (Graduate Level, BeihangU, with Dr. Xu Wang), <a href="http://www.xuwang.tech/course/sc2023fall/main.html">[Autumn 2023]</a></span></p> 
 <p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, UoLeeds, with Prof. Jie Xu), Autumn 2020-2022</span></p> 
 <p><span class="style11">&bull; Essentials of Cloud Computing (CS61839, Graduate Level, BeihangU, with Prof. Chunming Hu), Spring 2017</span></p> 
 <p><span class="style11">&bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html" style="text-decoration: none">~$ talks</a> </span></p>
@@ -496,7 +496,8 @@ I had the opportunity to work closely with many institutes around the world and 
 </center>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">Updated by Aug. 2023 <img src="icons/yin.gif" width="30" alt="Renyu" border="0" title="Renyu Yang" /></span></p>
+<p><span class="style11">Updated by Oct. 2023</span></p>
+<p><span class="style11"><img src="icons/yin.gif" width="50" alt="Renyu" border="0" title="Renyu Yang" />&nbsp;&nbsp;<img src="images/QRcode.png" width="50" alt="QRCode" border="0" title="Beihang Homepage" /></span></p>
 
  
 	
