--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@ p{ margin:10px auto}
 
 <!--p><span class="style11">~$ pub -rl</span></p--> 
 
+<p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy. IEEE ICDE 2024 <span class="red">(CCF A)</span> </span></p>
+
 <p><span class="style11">&bull; Z. Wen, R. Yang, B. Qian, Z. Wang, H. Peng, J. Xu, A.Y. Zomaya, R. Ranjan. <a href="paper/tsc2023.pdf" style="text-decoration: none">Janus: Latency-Aware Traffic Scheduling for IoT Data Streaming in Edge Environments</a>. IEEE TSC 2023 <span class="red">(CCF A)</span> </span></p>
 
 <p><span class="style11">&bull; D. Zou, H. Peng, X. Huang, R. Yang, J. Li, J. Wu, C. Liu, P. S. Yu. <a href="paper/www2023-segsl.pdf" style="text-decoration: none">SE-GSL: A General and Effective Graph Structure Learning Framework through Structural Entropy Optimization</a>. ACM WWW 2023  <span class="red">(CCF A)</span> </span></p>
@@ -424,6 +426,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="Bolder"><!--img src="icons/presentation-banner.png" width="25" height="25" border="0"/--> Teaching and Presentations </span></p>
  
+<p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Essentials of Modern Cloud Computing (Graduate Level, National College of Engineering Excellence, with Prof. Chunming Hu and co), [Spring 2024] </span></p>
 <p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Foudations of Cloud Computing (Undergraduate Level, BeihangU), [Spring 2024] </span></p>
 <p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Software Engineering (Undergraduate Level, BeihangU), [Spring 2024] </span></p>
 <p><span class="style11">&bull; Scientific Research Class (Undergraduate Level, BeihangU), [Autumn 2023] </span></p>
