--- a/publications.html
+++ b/publications.html
@@ -112,8 +112,17 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information. </span> &nbsp; &nbsp;</p>
 <p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. '= co-first authors with equal contribution by alphabetical order </span> &nbsp; &nbsp;</p>
 
+
+
+
+
+
 <p lang="en-US"><span class="blue">2023</span></p>
 
+
+<p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy. IEEE International Conference on Data Engineering (ICDE)
+<a href="paper/icde2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	
 
 <p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing  
 <a href="paper/ati2023-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
