--- a/alumni.html
+++ b/alumni.html
@@ -107,9 +107,9 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 
 <p><span class="style11">&bull; Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clement Mommessin (Postdoc, 2021.1-2023.4, UoLeeds) </span></p>
 <p><span class="style11">&bull; Dr. Qi Shen (Postdoc, 2017.9-2019.8, BeihangU): JPDC'20 </span></p>
-<p><span class="style11">&bull; <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (PhD., 2019.9-2023.12, UoLeeds, with Prof. Jie Xu and Prof. Zheng Wang): SOSP'17 poster, ICDCS'18, PLDI'21, ICDCS'22, TPDS'20, TPDS'22, JPDC'23</span></p>
+<p><span class="style11">&bull; <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (PhD., 2019.9-2023.12, UoLeeds, with Prof. Jie Xu and Prof. Zheng Wang, first employment PDRA at LeedsU): SOSP'17 poster, ICDCS'18'22, PLDI'21, SC'22, TPDS'20'22, JPDC'23</span></p>
 <p><span class="style11">&bull; Jiayu Zhao (2021.9- 2023.4, UoLeeds, with Prof. Zheng Wang): arXiv'22 </span></p>
-<p><span class="style11">&bull; Youmei Song (PhD, 2017.9- 2023.4, BDBC and BeihangU, with Prof. Tianyu Wo, first employment Postdoc at HKPolyU, China): SECON'22, JPDC'22 </span></p>
+<p><span class="style11">&bull; Youmei Song (PhD, 2017.9- 2023.4, BDBC and BeihangU, with Prof. Tianyu Wo, first employment PDRA at HKPolyU, China): SECON'22, JPDC'22 </span></p>
 <p><span class="style11">&bull; Jianyong Zhu (PhD, 2017.9-2022.3 , BDBC and BeihangU, with Prof. Chunming Hu, first employment Assistant Professor at NCEPU, China): TPDS'22, CCGRID'21, CLOUD'20, SoCC'19, etc. </span></p>
 <p><span class="style11">&bull; <a href="https://uk.linkedin.com/in/gingfung-matthew-yeung-a71688a2" style="text-decoration: none">Gingfung Yeung</a> (PhD, 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment Research Scientist at Huawei UK): HotCloud'20, ICA3PP'20, TPDS'22, etc. </span></p>
 <p><span class="style11">&bull; Yiming Hei (PhD, 2019.9-2022.1, BDBC and BeihangU, with Prof. Jianwei Liu and Dr. Hao Peng): TNNLS'21 </span></p>
