--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@ p{ margin:10px auto}
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
-<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 2,000+ citations, h-index=21, by July 2023), 
+<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 2,300+ citations, h-index=22, by Dec. 2023), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, JPDC, ACM Computing Surveys (CSUR), 
-	VLDB, SC, WWW, ICDCS, DSN, SoCC, SECON, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
+	VLDB, ICDE, WWW, SC, ICDCS, DSN, SoCC, SECON, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 for resilient deep reinforcement learning, and was awarded the Grand Class of Scientific and 
 	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) 
 	for the key contribution to the reliable resource management at massive scale and its industrial and societal impact.
@@ -265,7 +265,7 @@ p{ margin:10px auto}
 	<p><span class="style11">&bull; <strong>Improved system dependability:</strong>
 		fault tolerance and failover [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>], 
 		long-tail task mitigation [<a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>], 
-		and quantitative reliability modeling [<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>,<a href="paper/TR2016.pdf" style="text-decoration: none">TechReport'16</a>] etc.; </span></p>
+		and poisoning attacks modeling [<a href="paper/icde2024.pdf" style="text-decoration: none">ICDE'24</a>], etc.</span></p> 
 	<p><span class="style11">&bull; <strong>Enhanced deep learning systems and applications:</strong>  data-centric engineering [<a href="paper/sose2016.pdf" style="text-decoration: none">SOSE'16</a>,<a href="paper/csur2020.pdf" style="text-decoration: none">CSUR'20</a>,<a href="paper/tkde2021.pdf" style="text-decoration: none">TKDE'23</a>], 
 		GPU scheduling and parallelism [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>], 
 		graph representation learning [<a href="paper/tc2021.pdf" style="text-decoration: none">TC'21</a>,<a href="paper/tois2021-riognn.pdf" style="text-decoration: none">TOIS'21</a>,<a href="paper/www2023-segsl.pdf" style="text-decoration: none">WWW'23a</a>], 
@@ -362,11 +362,15 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <!--p><span class="style11">~$  <strong> grants -l </strong> </span></p-->
 
+<p><span class="style11">&bull; Cloud Native Technology: Theory and Practice (¥100K), funded by Digital Textbook Funding Programme, Beihang University, PI, 2024 </span></p> 
+
 <p><span class="style11">&bull; Efficient Resource Scheduling for Intelligent Computing Infrastructures (¥200K), funded by Advanced Multidisciplinary Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
 
-<p><span class="style11">&bull; Essentials of Modern Cloud Computing (¥400K), funded by Core Curriculum Redefined Plan, National College of Engineering Excellence, Co-I, 2023 - 2024  </span></p> 
+<p><span class="style11">&bull; Anomaly Management and Decision Making in Massive Custom Manufacturing (¥1.8M), funded by Advanced Multidisciplinary Research Programme, Beihang University, Key Member, 2024 - 2026  </span></p> 
 
-<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (¥300K), funded by Kuaishou Research Gift Award, Co-PI, 2023 - 2024  </span></p> 
+<p><span class="style11">&bull; Essentials of Modern Cloud Computing (¥400K), funded by Core Curriculum Redefined Programme, National College of Engineering Excellence, Co-I, 2023 - 2024  </span></p> 
+
+<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (¥300K), funded by Kuaishou Research Funding, Co-PI, 2023 - 2024  </span></p> 
 
 <p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
 
@@ -413,11 +417,10 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; [Class 2021] Kuoran Zhuang, Peixi Li, Tao Yan (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang, Jia Duan, Hang Xi (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang, Jiaxun Huang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
-<p><span class="style11">&bull; [Class 2024] Shiyi Huang (w/ Dr. Xu Wang), Zexin Wu </span></p>
-<p><span class="style11">&bull; [Part Time] Xiaoyu Liu, Qi Wang, Yao Zhang </span></p>
+<p><span class="style11">&bull; [Class 2024] Zexin Wu; Shiyi Huang (w/ Dr. Xu Wang), Mingming Zhang, Yuxuan Chen, Yuezheng Liu (w/ Prof. Tianyu Wo/Xudong Liu)</span></p>
+<p><span class="style11">&bull; [Part Time] Yao Zhang, Xiaoyu Liu, Qi Wang, Lu Pei</span></p>
 
 <p><span class="style11"><strong>Team Alumni</strong>: <a href="alumni.html" style="text-decoration: none">~$ alumni </a> </span></p>
-
 
 <hr style="width:100%;text-align:left;margin-left:0">
 
