--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ I had the opportunity to work closely with many institutes around the world and 
 </div>
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
 
-<p><span class="style11">&bull; [Class 2021] Kuoran Zhuang, Peixi Li, Tao Yan (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
+<p><span class="style11">&bull; [Class 2021] Tao Yan (co-supervised w/ Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang, Jia Duan, Hang Xi (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang, Jiaxun Huang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2024] Zexin Wu; Shiyi Huang (w/ Dr. Xu Wang), Mingming Zhang, Yuxuan Chen, Yuezheng Liu (w/ Prof. Tianyu Wo/Xudong Liu)</span></p>
