--- a/alumni.html
+++ b/alumni.html
@@ -108,7 +108,7 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 <p><span class="style11">&bull; Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clement Mommessin (Postdoc, 2021.1-2023.4, UoLeeds) </span></p>
 <p><span class="style11">&bull; Dr. Qi Shen (Postdoc, 2017.9-2019.8, BeihangU): JPDC'20 </span></p>
 <p><span class="style11">&bull; <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (PhD., 2019.9-2023.12, UoLeeds, with Prof. Jie Xu and Prof. Zheng Wang, first employment PDRA at LeedsU): SOSP'17 poster, ICDCS'18'22, PLDI'21, SC'22, TPDS'20'22, JPDC'23</span></p>
-<p><span class="style11">&bull; Jiayu Zhao (2021.9- 2023.4, UoLeeds, with Prof. Zheng Wang): arXiv'22 </span></p>
+<p><span class="style11">&bull; Jiayu Zhao (2021.9- 2023.4, UoLeeds, with Prof. Zheng Wang): arXiv'22, TMLR'24 </span></p>
 <p><span class="style11">&bull; Youmei Song (PhD, 2017.9- 2023.4, BDBC and BeihangU, with Prof. Tianyu Wo, first employment PDRA at HKPolyU, China): SECON'22, JPDC'22 </span></p>
 <p><span class="style11">&bull; Jianyong Zhu (PhD, 2017.9-2022.3 , BDBC and BeihangU, with Prof. Chunming Hu, first employment Assistant Professor at NCEPU, China): TPDS'22, CCGRID'21, CLOUD'20, SoCC'19, etc. </span></p>
 <p><span class="style11">&bull; <a href="https://uk.linkedin.com/in/gingfung-matthew-yeung-a71688a2" style="text-decoration: none">Gingfung Yeung</a> (PhD, 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment Research Scientist at Huawei UK): HotCloud'20, ICA3PP'20, TPDS'22, etc. </span></p>
@@ -121,16 +121,18 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 
 <p><span class="style11"><strong> Former MSc. Students (by Research) @BeihangU </strong></span></p> 
 
+<p><span class="style11">&bull; Pexi Li (2021.9-2023.12, first employment at ByteDance)</span></p> 
+<p><span class="style11">&bull; Kuoran Zhuang (2021.9-2023.12)</span></p> 
 <p><span class="style11">&bull; Shiqing Xue (2018.9-2020.12, first employment at Tecent)</span></p> 
-<p><span class="style11">&bull; Junqing Xiao (MSc, 2016.9-2018.12, first employment at Alibaba)</span></p> 
-<p><span class="style11">&bull; Ximing Qu (MSc, 2016.9-2018.12, first employment at Alibaba)</span></p> 
-<p><span class="style11">&bull; Xiaoyang Sun (MSc, 2015.9-2018.3, PhD student at UoLeeds UK) </span></p> 
-<p><span class="style11">&bull; Lian Du (MSc, 2015.9-2018.3, first employment at Alibaba)</span></p> 
-<p><span class="style11">&bull; Hailun Wang (MSc, 2015.9-2017.3, first employment at Baidu)  </span></p> 
-<p><span class="style11">&bull; Xixu Wang (MSc, 2014.9-2017.3, first employment at Baidu)</span></p> 
-<p><span class="style11">&bull; Wenbo Jiang (MSc, 2013.9-2016.3, first employment at NetEase Inc.)</span></p> 
-<p><span class="style11">&bull; Yunchang Zhao (MSc, 2013.9-2016.3, first employment at an Internet startup)</span></p> 
-<p><span class="style11">&bull; Yuda Wang (MSc, 2012.9-2015.3, first employment at China Telecom.) </span></p> 
+<p><span class="style11">&bull; Junqing Xiao (2016.9-2018.12, first employment at Alibaba)</span></p> 
+<p><span class="style11">&bull; Ximing Qu (2016.9-2018.12, first employment at Alibaba)</span></p> 
+<p><span class="style11">&bull; Xiaoyang Sun (2015.9-2018.3, PhD student at UoLeeds UK) </span></p> 
+<p><span class="style11">&bull; Lian Du (2015.9-2018.3, first employment at Alibaba)</span></p> 
+<p><span class="style11">&bull; Hailun Wang (2015.9-2017.3, first employment at Baidu)  </span></p> 
+<p><span class="style11">&bull; Xixu Wang (2014.9-2017.3, first employment at Baidu)</span></p> 
+<p><span class="style11">&bull; Wenbo Jiang (2013.9-2016.3, first employment at NetEase Inc.)</span></p> 
+<p><span class="style11">&bull; Yunchang Zhao (2013.9-2016.3, first employment at an Internet startup)</span></p> 
+<p><span class="style11">&bull; Yuda Wang (2012.9-2015.3, first employment at China Telecom.) </span></p> 
 
 
 <p><span class="style11"><strong> Former MSc. Students @UoLeeds </strong></span></p> 
