--- a/publications.html
+++ b/publications.html
@@ -116,13 +116,16 @@ p{ margin:10px auto}
 
 
 
+<p lang="en-US"><span class="blue">2024</span></p>
 
-<p lang="en-US"><span class="blue">2023</span></p>
-
+<p><span class="style11">&bull; J. Zhao, R. Yang, S. Qiu, Z. Wang. Unleashing the Potential of Acquisition Functions in High Dimensional Bayesian Optimization. Transactions on Machine Learning Research (TMLR) <a href="paper/tmlr2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 <p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy. IEEE International Conference on Data Engineering (ICDE)
 <a href="paper/icde2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 </span></p>	
+
+
+<p lang="en-US"><span class="blue">2023</span></p>
 
 <p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing  
 <a href="paper/ati2023-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
@@ -279,7 +282,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">  &bull; R. Yang, Z. Zhao, J. Ouyang, J. Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT (invited chapter and in press) </span></p>
 
 
-<p lang="en-US"><span class="blue">2017 </span></p>
+<p lang="en-US"> <span class="blue">2017 and Before </span></p>
 
 <p><span class="style11">  &bull; R. Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 <span class="red"> (with Honor, Outstanding Graduate Award of Beijing Graduates)</span>
 </span></p>
@@ -298,16 +301,6 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <a href="paper/ccfcomm2017.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
 
-<p><span class="style11">  &bull; L. Du, T. Wo, R. Yang*, C. Hu. Cider: a Rapid Docker Container Deployment System through Sharing Network Storage. in the 19th IEEE HPCC 2017
-<a href="paper/hpcc2017.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
-</span></p>
-
-<p><span class="style11">  &bull; X. Ouyang, C. Wang, R. Yang, P. Townend, J. Xu. ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics. In the 23th IEEE ICPADS 2017 <a href="paper/icpads2017.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
-</span></p>
-
-<p lang="en-US"> <span class="blue">2016 and Before </span></p>
-
-
 <p><span class="style11">  &bull; Z. Zhang, C. Li, Y. Tao, R. Yang*, H. Tang, J. Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale, in the 40th VLDB 2014 <a href="paper/vldb2014.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
 
@@ -324,6 +317,13 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 </span></p>
 
 <p><span class="style11">  &bull; R. Yang, T. Wo, C. Hu, J. Xu and M. Zhang. D2PS : a Dependable Data Provisioning Service in Multi-tenants Cloud Environment. in the 17th IEEE HASE 2016 <a href="paper/hase2016.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
+</span></p>
+
+<p><span class="style11">  &bull; L. Du, T. Wo, R. Yang*, C. Hu. Cider: a Rapid Docker Container Deployment System through Sharing Network Storage. in the 19th IEEE HPCC 2017
+<a href="paper/hpcc2017.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
+</span></p>
+
+<p><span class="style11">  &bull; X. Ouyang, C. Wang, R. Yang, P. Townend, J. Xu. ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics. In the 23th IEEE ICPADS 2017 <a href="paper/icpads2017.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
 
 <p><span class="style11">  &bull; C. Hu, X. Wang, R. Yang and T. Wo. ScalaRDF: a Distributed, Elastic and Scalable In-Memory RDF Triple Store. in the 22th IEEE ICPADS 2016 <a href="paper/icpads2016.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
