--- a/publications_topics.html
+++ b/publications_topics.html
@@ -118,7 +118,7 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="blue"> Distributed and Parallel Computing </span></p>
 
 
-<p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing  
+<p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing, 2023  
 	<a href="paper/ati2023-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 	</span></p>
 
@@ -210,6 +210,10 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 
 <p lang="en-US"><span class="blue"> System Dependability </span></p>
 
+<p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy. IEEE International Conference on Data Engineering (ICDE), 2024
+	<a href="paper/icde2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+	</span></p>	
+
 <p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. BISSIAM: Bispectrum Siamese Network Based
 	Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 <a href="paper/tkde2021-bissiam.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 	</span></p>
@@ -252,6 +256,8 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 
 <p lang="en-US"><span class="blue"> Deep Learning Systems and Applications </span></p>
+
+<p><span class="style11">&bull; J. Zhao, R. Yang, S. Qiu, Z. Wang. Unleashing the Potential of Acquisition Functions in High Dimensional Bayesian Optimization. Transactions on Machine Learning Research (TMLR), 2024 <a href="paper/tmlr2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 <p><span class="style11">&bull; Y. Yang, R. Yang*, H. Peng, Y. Li, T. Li, Y. Liao, P. Zhou. FedACK: Federated Adversarial Contrastive Knowledge Distillation for Cross-Lingual and Cross-Model Social Bot Detection. ACM WWW 2023 <a href="paper/www2023-fedack.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
